--- a/system/scene/top.html
+++ b/system/scene/top.html
@@ -37,8 +37,8 @@
 </tr>
 <tr>
   <td class="align-top p-0" style="width: 200px;">
-    <div class="list-group w-100 m-0">
-      <a data-id="goUserList" href="#" class="list-group-item list-group-item-action active rounded-0">ユーザー・リスト</a>
+    <div data-id="mnuLeft" class="list-group w-100 m-0">
+      <a data-id="goUserList" href="#" class="list-group-item list-group-item-action rounded-0">ユーザー・リスト</a>
       <a data-id="btnDummyMenu1" href="#" class="list-group-item list-group-item-action" data-toggle="modal">ダミーメニュー①</a>
       <a href="#" class="list-group-item list-group-item-action">ダミーメニュー②</a>
       <a href="#" class="list-group-item list-group-item-action">ダミーメニュー③</a>
