小バグの修正

--- a/system/scene/screen.html
+++ b/system/scene/screen.html
@@ -9,7 +9,7 @@
   <script type="text/javascript" charset="utf-8" src="<?=url('/library/jquery-3.5.0.min.js') ?>"></script>
   <script type="text/javascript" charset="utf-8" src="<?=url('/library/js/bootstrap.min.js') ?>"></script>
   <script type="text/javascript" charset="utf-8" src="<?=url('/wsi/helper.js') ?>"></script>
-  <script type="text/javascript" charset="utf-8" src="<?=url('/system/system_common.js') ?>"></script>
+  <script type="text/javascript" charset="utf-8" src="<?=url('/system/dialog.js') ?>"></script>
   <?php if(isset($attributes['script_id'])) { ?>
   <script type="text/javascript" charset="utf-8" src="<?=url($attributes['script_id'], $_GET) ?>"></script>
   <?php } ?>
