--- a/system/scene/top.html
+++ b/system/scene/top.html
@@ -3,31 +3,20 @@
 <thead>
 <tr>
   <td colspan="2">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">動画配信（仮）</a>
-<!--
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
- -->
-      <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-        <ul class="navbar-nav mr-auto mt-2">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="#">Disabled</a>
-          </li>
-        </ul>
-        <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="search" aria-label="Search">
-          <button data-id="goSearch" class="btn btn-outline-success my-2 my-sm-0" type="button">検索</button>
-        </form>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col d-flex flex-row">
+          <h3 class="align-items-start my-2 mx-2">動画配信（仮）</h3>
+        </div>
+        <div class="col d-flex flex-row-reverse">
+          <button data-id="goLogout" class="btn btn-link my-2 my-sm-0 align-items-end" type="button">ログアウト</button>
+        </div>
       </div>
-    </nav>
+    </div>
+
+    <div class="d-flex justify-content-between">
+
+    </div>
   </td>
 </tr>
 </thead>
