--- a/system/scene/top.html
+++ b/system/scene/top.html
@@ -13,10 +13,6 @@
         </div>
       </div>
     </div>
-
-    <div class="d-flex justify-content-between">
-
-    </div>
   </td>
 </tr>
 </thead>
@@ -27,8 +23,8 @@
 <tr>
   <td class="align-top p-0" style="width: 200px;">
     <div data-id="mnuLeft" class="list-group w-100 m-0">
+      <a data-id="goCreateUser" href="#" class="list-group-item list-group-item-action" data-toggle="modal">ダミーメニュー①</a>
       <a data-id="goUserList" href="#" class="list-group-item list-group-item-action rounded-0">ユーザー・リスト</a>
-      <a data-id="btnDummyMenu1" href="#" class="list-group-item list-group-item-action" data-toggle="modal">ダミーメニュー①</a>
       <a href="#" class="list-group-item list-group-item-action">ダミーメニュー②</a>
       <a href="#" class="list-group-item list-group-item-action">ダミーメニュー③</a>
       <a href="#" class="list-group-item list-group-item-action">ダミーメニュー④</a>
