--- a/system/scene/sub_screen.html
+++ b/system/scene/sub_screen.html
@@ -1,11 +1,11 @@
 <?php
 ?>
 <!DOCTYPE html>
-<html class="h-100">
+<html>
 <head>
   <meta charset="UTF-8">
-  <title><?=@$attributes['title'] ?></title>
   <link type="text/css" rel="stylesheet" href="<?=url('/library/css/bootstrap.min.css') ?>">
+  <link type="text/css" rel="stylesheet" href="<?=url('/system/extent-bootstrap.css') ?>">
   <script type="text/javascript" charset="utf-8" src="<?=url('/library/jquery-3.5.0.min.js') ?>"></script>
   <script type="text/javascript" charset="utf-8" src="<?=url('/library/js/bootstrap.min.js') ?>"></script>
   <script type="text/javascript" charset="utf-8" src="<?=url('/library/js/bootstrap.bundle.min.js') ?>"></script>
@@ -15,5 +15,5 @@
   <script type="text/javascript" charset="utf-8" src="<?=url($attributes['script_id'], $_GET) ?>"></script>
   <?php } ?>
 </head>
-<body class="h-100 p-0"><?php $content() ?></body>
+<body class="m-0 p-0"><?php $content() ?></body>
 </html>
