--- a/system/scene/dialog.html
+++ b/system/scene/dialog.html
@@ -1,6 +1,6 @@
 <div id="<?=$attributes['id'] ?>" data-id="<?=$attributes['id'] ?>" data-type="system.Dialog" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="<?=$attributes['id'] ?>_label" aria-hidden="true">
-<div class="modal-dialog">
-  <div class="modal-content">
+<div class="modal-dialog" style="height:90%;">
+  <div class="modal-content h-100">
     <div class="modal-header">
       <h5 class="modal-title" data-id="<?=$attributes['id'] ?>_label"></h5>
     </div>
