--- a/system/scene/screen.html
+++ b/system/scene/screen.html
@@ -6,6 +6,7 @@
   <meta charset="UTF-8">
   <title><?=@$attributes['title'] ?></title>
   <link type="text/css" rel="stylesheet" href="<?=url('/library/css/bootstrap.min.css') ?>">
+  <link type="text/css" rel="stylesheet" href="<?=url('/system/extent-bootstrap.css') ?>">
   <script type="text/javascript" charset="utf-8" src="<?=url('/library/jquery-3.5.0.min.js') ?>"></script>
   <script type="text/javascript" charset="utf-8" src="<?=url('/library/js/bootstrap.min.js') ?>"></script>
   <script type="text/javascript" charset="utf-8" src="<?=url('/library/js/bootstrap.bundle.min.js') ?>"></script>
