--- a/system/scene/screen.html
+++ b/system/scene/screen.html
@@ -11,6 +11,7 @@
   <script type="text/javascript" charset="utf-8" src="<?=url('/library/js/bootstrap.min.js') ?>"></script>
   <script type="text/javascript" charset="utf-8" src="<?=url('/library/js/bootstrap.bundle.min.js') ?>"></script>
   <script type="text/javascript" charset="utf-8" src="<?=url('/wsi/helper.js') ?>"></script>
+  <script type="text/javascript" charset="utf-8" src="<?=url('/system/constants.js') ?>"></script>
   <script type="text/javascript" charset="utf-8" src="<?=url('/system/dialog.js') ?>"></script>
   <?php if(isset($attributes['script_id'])) { ?>
   <script type="text/javascript" charset="utf-8" src="<?=url($attributes['script_id'], $_GET) ?>"></script>
