--- a/system/scene/setting.html
+++ b/system/scene/setting.html
@@ -14,7 +14,16 @@
   <div class="form-group row">
     <label for="txtDefaultValue" class="col-2 col-sm-2 col-md-2 col-lg-1 col-xl-1 col-form-label text-right">初期値</label>
     <div class="col-10 col-sm-10 col-md-10 col-lg-11 col-xl-11">
-      <input type="text" class="form-control" data-id="txtDefaultValue" id="txtDefaultValue" value="">
+      <input type="text" class="form-control d-inline w-50" data-id="txtDefaultStringValue" id="txtDefaultStringValue" value="">
+      <textarea class="form-control d-inline w-100" data-id="txtDefaultTextValue" id="txtDefaultTextValue"></textarea>
+      <input type="number" class="form-control d-inline" style="width:160px;" data-id="txtDefaultIntValue" id="txtDefaultIntValue" value="">
+      <input type="number" class="form-control d-inline" style="width:200px;" data-id="txtDefaultDoubleValue" id="txtDefaultDoubleValue" value="">
+      <input type="date" class="form-control d-inline" style="width:170px;" data-id="txtDefaultDateValue" id="txtDefaultDateValue" value="">
+      <input type="time" class="form-control d-inline" style="width:100px;" data-id="txtDefaultTimeValue" id="txtDefaultTimeValue" value="">
+      <input type="checkbox" class="form-control d-inline" style="width:38px;" data-id="txtDefaultFlagValue" id="txtDefaultFlagValue" value="">
+      <select class="form-control d-inline mx-0 px-0" style="width:32%;" data-id="txtDefaultDivision1Value" id="txtDefaultDivision1Value"></select>
+      <select class="form-control d-inline mx-0 px-0" style="width:32%;" data-id="txtDefaultDivision2Value" id="txtDefaultDivision2Value"></select>
+      <select class="form-control d-inline mx-0 px-0" style="width:32%;" data-id="txtDefaultDivision3Value" id="txtDefaultDivision3Value"></select>
     </div>
   </div>
   <div class="form-group row">
