--- a/system/scene/setting.html
+++ b/system/scene/setting.html
@@ -21,9 +21,10 @@
       <input type="date" class="form-control d-inline" style="width:170px;" data-id="txtDefaultDateValue" id="txtDefaultDateValue" value="">
       <input type="time" class="form-control d-inline" style="width:100px;" data-id="txtDefaultTimeValue" id="txtDefaultTimeValue" value="">
       <input type="checkbox" class="form-control d-inline" style="width:38px;" data-id="txtDefaultFlagValue" id="txtDefaultFlagValue" value="">
-      <select class="form-control d-inline mx-0 px-0" style="width:32%;" data-id="txtDefaultDivision1Value" id="txtDefaultDivision1Value"></select>
-      <select class="form-control d-inline mx-0 px-0" style="width:32%;" data-id="txtDefaultDivision2Value" id="txtDefaultDivision2Value"></select>
-      <select class="form-control d-inline mx-0 px-0" style="width:32%;" data-id="txtDefaultDivision3Value" id="txtDefaultDivision3Value"></select>
+      <select class="form-control d-inline mx-0 px-0" style="width:24%;" data-id="txtDefaultDivision1Value" id="txtDefaultDivision1Value"></select>
+      <select class="form-control d-inline mx-0 px-0" style="width:24%;" data-id="txtDefaultDivision2Value" id="txtDefaultDivision2Value"></select>
+      <select class="form-control d-inline mx-0 px-0" style="width:24%;" data-id="txtDefaultDivision3Value" id="txtDefaultDivision3Value"></select>
+      <select class="form-control d-inline mx-0 px-0" style="width:24%;" data-id="txtDefaultDivisionValue" id="txtDefaultDivisionValue"></select>
     </div>
   </div>
   <div class="form-group row">
@@ -37,9 +38,11 @@
     </div>
     <div class="col d-flex p-1">
     </div>
-    <div class="col d-flex flex-row-reverse p-1">
-      <button data-id="btnAppend" type="button" class="btn btn-success align-items-center ml-1">追加</button>
+    <div class="col d-flex justify-content-end p-1">
+      <button data-id="btnCancel" type="button" class="btn btn-success align-items-center ml-1">キャンセル</button>
+      &nbsp;&nbsp;
       <button data-id="btnUpdate" type="button" class="btn btn-success align-items-center invisible">更新</button>
+      <button data-id="btnAppend" type="button" class="btn btn-success align-items-center ml-1">追加</button>
     </div>
   </div>
 </div>
