--- a/common/scene/login.html
+++ b/common/scene/login.html
@@ -1,4 +1,4 @@
-<?=Utils::template('/common/screen.html', ['title'=>'認証', 'script_id'=>'/common/login.js'], function() { ?><div class="container h-50 d-flex">
+<?=Utils::template('/system/screen.html', ['title'=>'認証', 'script_id'=>'/common/login.js'], function() { ?><div class="container h-50 d-flex">
 <div class="align-self-center"><form id="main">
 <div><label>ID:</label>&nbsp;<input data-id="loginId" type="text"></div>
 <div><label>PW:</label>&nbsp;<input data-id="loginPw" type="password"></div>
